<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_app"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/logo_ninja"
            android:src="@drawable/ninja" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#555">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/usernameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usernameRegister"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#555">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordRegister"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#555">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/repass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#555">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailRegister"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/RegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue"
            android:textColor="#fff"
            android:layout_marginTop="15dp"
            android:text="@string/registerBtn" />

    </LinearLayout>
</ScrollView>