<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_app"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/logo_ninja"
            android:src="@drawable/ninja" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#555">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/usernameLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usernameLogin"
                android:inputType="text"
                android:textColorLink="@android:color/holo_blue_light" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#555">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordLogin"
                android:inputType="textPassword"
                android:textColorLink="@android:color/holo_blue_light" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_blue"
            android:text="@string/loginText"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/createAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/createAccLogin"
            android:textColor="#555" />

    </LinearLayout>

</ScrollView>